Project

General

Profile

Actions

Bug #16229

closed

rbd-mirror: do not propagate deletions when pool unavailable

Added by Jason Dillaman almost 8 years ago. Updated almost 8 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

For safety reasons, if the remote pool is unavailable/unreachable, do not propagate deletion events.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16233: jewel: rbd-mirror: do not propagate deletions when pool unavailableResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Jason Dillaman almost 8 years ago

  • Copied to Backport #16233: jewel: rbd-mirror: do not propagate deletions when pool unavailable added
Actions #4

Updated by Jason Dillaman almost 8 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF