rbd-mirror: do not propagate deletions when pool unavailable

Fixes: http://tracker.ceph.com/issues/16229
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit d321634414fa4b90c66474557ec990dfc935ae29)